fixed syntax highlighting bugs